hphp/test/zend/good/ext/sockets/tests/bug46360.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (version_compare(phpversion(), '5.2.7', '<')) {
    die('skip old php, not eligible');
}
}
