hphp/test/zend/bad/ext/pdo_mysql/tests/pdo_mysql_stmt_fetch_serialize.php.skipif
<?php
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'skipif.inc');
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'mysql_pdo_test.inc');
MySQLPDOTest::skip();
if (version_compare(PHP_VERSION, '5.1.0', '<'))
	die("skip Needs 5.1.0 and Interface Serializable");
?>